# Resume-scorer

./: README.md  pyproject.toml  resume_parser.py
